--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="grid billboard">
             <div class="unit unit-xs-1 unit-s-1-2 unit-m-1-3 unit-l-1-3 pad-top">
                 <div class="billcap">
-                    <h1 class="push-0 title">Just Like a Concert</h1>
-                    <p class="about">Experience the concert without being there. Nothing is impossible with Andromeda.</p>
+                    <h1 class="push-1-2 title">Just Like a Concert</h1>
+                    <p class="about cap">Experience the concert without being there. Nothing is impossible with Andromeda.</p>
                     <a class="join" href="#">Join</a>
                 </div>
             </div>
