added join page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="billcap gutter-1-2">
                     <h1 class="push-1-2 title">Just Like a Concert</h1>
                     <p class="about cap">Experience the concert without being there. Nothing is impossible with Andromeda.</p>
-                    <a class="join push" href="#">Join</a>
+                    <a class="join push" href="join.html">Join</a>
                 </div>
             </div>
         </div>
