--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/typography.css" rel="stylesheet">
   <link href="css/grids.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
@@ -44,12 +44,12 @@
         </div>
     
     <div class="grid intro">
-        <div class="unit unti-xs-1 unti-s-1 unit-m-1-2 unit-l-2 pad-t">
-            <img class="mainicon" src="images/main-icon.svg" alt="headphones">
+        <div class="unit unti-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2 pad-t">
+            <img class="push mainicon" src="images/main-icon.svg" alt="headphones">
         </div>
-        <div class=" introtext unit unti-xs-1 unti-s-1 unit-m-1-2 unit-l-2 pad-t">
-            <h2 class="expcap introtitle">A music sharing service</h2>
-            <p class="introcap">Andromeda allows you to share and discover high quality music from all over the world. Experience the joy of listening to your favourite music as well as new music from various countries, artists, genres and languages.</p>
+        <div class="introtext unit unti-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2">
+            <h2 class="expcap introtitle gutter-1-2 exa">A music sharing service</h2>
+            <p class="introcap gutter-1-2 mega">Andromeda allows you to share and discover high quality music from all over the world. Experience the joy of listening to your favourite music as well as new music from various countries, artists, genres and languages.</p>
         </div>
     </div>
     
