--- a/tour.html
+++ b/tour.html
@@ -27,7 +27,7 @@
         <nav class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
           <ul class="nav mega push-0"> 
               <li><a href="join.html">Join</a></li>
-              <li><a href="tour.html">Tour</a></li>                               
+              <li><a class="nav-current" href="tour.html">Tour</a></li>                               
           </ul>
        </nav>
     </header>
