finsihed tour page

--- a/join.html
+++ b/join.html
@@ -41,7 +41,7 @@
         
     <div class="grid">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-            <h1 class="jointitle">Join us</h1>
+            <h1 class="jointitle push-0">Join us</h1>
         </div>
     </div>    
     <form action="thanks.html" method=“post” class="grid form">
