--- a/join.html
+++ b/join.html
@@ -84,9 +84,9 @@
         </div>
         
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-            <div>
+            <a href="thanks.html">
             <button type="submit">Join</button>
-            </div>
+            </a>
         </div>
     </form>
     </main>
