finished thank you page

--- a/tour.html
+++ b/tour.html
@@ -7,7 +7,7 @@
   <link href="css/typography.css" rel="stylesheet">
   <link href="css/grids.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
@@ -32,7 +32,7 @@
        </nav>
     </header>
     
-    <main>
+    <main role="main" id="main">
         <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
                 <h1 class="jointitle push-0">Our Offers</h1>
