--- a/thanks.html
+++ b/thanks.html
@@ -26,7 +26,7 @@
         <nav class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
           <ul class="nav mega push-0"> 
               <li><a href="join.html">Join</a></li>
-              <li><a href="tour.html">Tour</a></li>                               
+              <li><a href="tour.html">Our Offers</a></li>             
           </ul>
        </nav>
     </header>
@@ -45,7 +45,7 @@
         <nav class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
             <ul class="nav kilo push-0"> 
                 <li><a href="join.html">Join</a></li>
-                <li><a href="tour.html">Tour</a></li>
+                <li><a href="tour.html">Our Offers</a></li>
             </ul>
         </nav>
     </footer>
