--- a/join.html
+++ b/join.html
@@ -82,6 +82,16 @@
                 </select>
             </div>
         </div>
+        <div class="unit unit-xs-1 unit-s unit-m-1-2 unit-l-1-2 pad-t-1-2">
+            <div> 
+                <label for="subscribtion">Subscribtion</label>
+                <select id="subscribtion">
+                    <option>Free</option>
+                    <option>Casual</option>
+                    <option selected>Devoted</option>
+                </select>
+            </div>
+        </div>
         
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
             <a href="thanks.html">
