--- a/tour.html
+++ b/tour.html
@@ -47,7 +47,9 @@
                             <li>Random Playlists</li>
                             <li>Access to 30% of the music database</li>
                         </ul>
+                    <a class="prices" href="join.html">
                     <p class="price">$0/month</p>
+                    </a>
                 </div>
             </div>
             <div class="pad-t gutter-1-2 unit unit-xs-1 unti-s-1 unit-m-1-3 unit-l-1-3">
@@ -61,7 +63,9 @@
                             <li>Follow Other Users</li>
                             <li>Access to 60% of the music database</li>
                         </ul>
+                    <a class="prices" href="join.html">
                     <p class="price1">$10/month</p>
+                    </a>
                 </div>
             </div>
             <div class="pad-t gutter-1-2 unit unit-xs-1 unti-s-1 unit-m-1-3 unit-l-1-3">
@@ -77,7 +81,9 @@
                             <li>Save Playlists</li>
                             <li>Access to 100% of the music database</li>
                         </ul>
+                    <a class="prices" href="join.html">
                     <p class="price2">$15/month</p>
+                    </a>
                 </div>
             </div>
         </div>
