--- a/tour.html
+++ b/tour.html
@@ -44,7 +44,7 @@
                     <h2 class="zetta free">Free</h2>
                         <ul class="offers">
                             <li>Chat</li>
-                            <li>Random Playlists</li>
+                            <li>Random playlists</li>
                             <li>Access to 30% of the music database</li>
                         </ul>
                     <a class="prices" href="join.html">
@@ -57,10 +57,10 @@
                     <h2 class="h2 zetta">Casual</h2>
                         <ul class="offers">
                             <li>Chat</li>
-                            <li>Random Playlists</li>
-                            <li>Favourite Songs</li>
+                            <li>Random playlists</li>
+                            <li>Favourite songs</li>
                             <li>Create uniques playlists</li>
-                            <li>Follow Other Users</li>
+                            <li>Follow other users</li>
                             <li>Access to 60% of the music database</li>
                         </ul>
                     <a class="prices" href="join.html">
@@ -73,12 +73,12 @@
                     <h2 class="h2 zetta">Devoted</h2>
                         <ul class="offers">
                             <li>Chat</li>
-                            <li>Random Playlists</li>
-                            <li>Favourite Songs</li>
+                            <li>Random playlists</li>
+                            <li>Favourite songs</li>
                             <li>Create uniques playlists</li>
-                            <li>Follow Other Users</li>
-                            <li>Search Songs</li>
-                            <li>Save Playlists</li>
+                            <li>Follow other users</li>
+                            <li>Search songs</li>
+                            <li>Save playlists</li>
                             <li>Access to 100% of the music database</li>
                         </ul>
                     <a class="prices" href="join.html">
