--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img class="push mainicon" src="images/main-icon.svg" alt="headphones">
         </div>
         <div class="introtext unit unti-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2">
-            <h2 class="expcap introtitle gutter-1-2 exa">A music sharing service</h2>
+            <h2 class="expcap introtitle gutter-1-2 zetta">A music sharing service</h2>
             <p class="introcap gutter-1-2 mega">Andromeda allows you to share and discover high quality music from all over the world. Experience the joy of listening to your favourite music as well as new music from various countries, artists, genres and languages.</p>
         </div>
     </div>
