--- a/join.html
+++ b/join.html
@@ -24,7 +24,7 @@
                   <a href="index.html" class="logo"><img class="logo" src="images/saas-logo.svg" alt="andromedia"></a>
               </div>
             </div>
-        <nav class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+        <nav role="navigation" id="nav" class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
           <ul class="nav mega push-0"> 
               <li><a class="nav-current" href="join.html">Join</a></li>
               <li><a href="tour.html">Offers</a></li>                               
